--- a/media/css/article-styles.css
+++ b/media/css/article-styles.css
@@ -1,3 +1,9 @@
+ul.tags.inline { font-size: 0; list-style: none; margin: 0 auto; padding: 0; width: 100%; }
+ul.tags.inline li { display: inline-block; font-size: 14px; line-height: calc(18 / 14); margin: 0 8px 16px; padding: 0; vertical-align: top; }
+ul.tags.inline li:first-child { margin-left: 0; }
+ul.tags.inline li a { background: #dadada; border-radius: 0; color: #0a0a0a; cursor: pointer; display: block; font-size: inherit; font-weight: normal; line-height: inherit; padding: 8px 10px; text-decoration: none; white-space: nowrap; }
+ul.tags.inline li a:focus, ul.tags.inline li a:hover { background: #9f9f9f; color: #fefefe; }
+
 .videowrapper { /* background styles, etc. */ border: 0 solid #554832; margin: 0 auto 36px; position: relative; }
 .videowrapper::before, .videowrapper:before { content: ''; float: left; margin-left: -1px; padding: 56.25% 0 0 0; width: 1px; }
 .videowrapper::after, .videowrapper:after { clear: both; content: ''; display: table; }
