--- a/admin/models/forms/filter_articles.xml
+++ b/admin/models/forms/filter_articles.xml
@@ -4,6 +4,7 @@
 		<field
 			name="search"
 			type="text"
+			inputmode="search"
 			label="COM_BLOG_FILTER_SEARCH_LABEL"
 			description="COM_BLOG_FILTER_SEARCH_DESC"
 			hint="JSEARCH_FILTER"
@@ -99,6 +100,7 @@
 			description="COM_BLOG_LIST_FULL_ORDERING_DESC"
 			onchange="this.form.submit();"
 			default="a.id DESC"
+			validate="options"
 			>
 			<option value="">JGLOBAL_SORT_BY</option>
 			<option value="a.ordering ASC">JGRID_HEADING_ORDERING_ASC</option>
