--- a/admin/models/forms/article.xml
+++ b/admin/models/forms/article.xml
@@ -62,7 +62,7 @@
 			type="editor"
 			label="COM_BLOG_FIELD_ARTICLETEXT_LABEL"
 			description="COM_BLOG_FIELD_ARTICLETEXT_DESC"
-			filter="JComponentHelper::filterText"
+			filter="ComponentHelper::filterText"
 			buttons="false"
 		/>
 
@@ -129,7 +129,7 @@
 			showon="toggle_sources_type:0"
 			label="COM_BLOG_FIELD_SOURCES_BLOB_LABEL"
 			description="COM_BLOG_FIELD_SOURCES_BLOB_DESC"
-			filter="JComponentHelper::filterText"
+			filter="ComponentHelper::filterText"
 			buttons="false"
 		/>
 
@@ -163,7 +163,7 @@
 			type="list"
 			label="JSTATUS"
 			description="JFIELD_PUBLISHED_DESC"
-			class="chzn-color-state"
+			class="form-select-color-state chzn-color-state"
 			filter="intval"
 			size="1"
 			default="1"
@@ -178,6 +178,7 @@
 			name="catid"
 			type="categoryedit"
 			label="JCATEGORY"
+			addfieldprefix="Joomla\Component\Categories\Administrator\Field"
 			description="JFIELD_CATEGORY_DESC"
 			required="true"
 			default=""
@@ -379,6 +380,7 @@
 				type="componentlayout"
 				label="JFIELD_ALT_LAYOUT_LABEL"
 				description="JFIELD_ALT_COMPONENT_LAYOUT_DESC"
+				class="switcher chzn-color"
 				useglobal="true"
 				extension="com_blog"
 				view="article"
@@ -389,7 +391,7 @@
 				type="list"
 				label="JGLOBAL_SHOW_TITLE_LABEL"
 				description="JGLOBAL_SHOW_TITLE_DESC"
-				class="chzn-color"
+				class="switcher chzn-color"
 				useglobal="true"
 				>
 				<option value="1">JSHOW</option>
@@ -401,7 +403,7 @@
 				type="list"
 				label="JGLOBAL_LINKED_TITLES_LABEL"
 				description="JGLOBAL_LINKED_TITLES_DESC"
-				class="chzn-color"
+				class="switcher chzn-color"
 				useglobal="true"
 				>
 				<option	value="0">JNO</option>
@@ -413,7 +415,7 @@
 				type="list"
 				label="COM_BLOG_FIELD_SHOW_TAGS_LABEL"
 				description="COM_BLOG_FIELD_SHOW_TAGS_DESC"
-				class="chzn-color"
+				class="switcher chzn-color"
 				useglobal="true"
 				>
 				<option value="1">JSHOW</option>
@@ -425,7 +427,7 @@
 				type="list"
 				label="JGLOBAL_SHOW_INTRO_LABEL"
 				description="JGLOBAL_SHOW_INTRO_DESC"
-				class="chzn-color"
+				class="switcher chzn-color"
 				useglobal="true"
 				>
 				<option value="1">JSHOW</option>
@@ -449,7 +451,7 @@
 				type="list"
 				label="COM_BLOG_FIELD_INFOBLOCK_TITLE_LABEL"
 				description="COM_BLOG_FIELD_INFOBLOCK_TITLE_DESC"
-				class="chzn-color"
+				class="switcher chzn-color"
 				useglobal="true"
 				>
 				<option	value="0">JHIDE</option>
@@ -462,7 +464,7 @@
 				label="JGLOBAL_SHOW_CATEGORY_LABEL"
 				description="JGLOBAL_SHOW_CATEGORY_DESC"
 				useglobal="true"
-				class="chzn-color"
+				class="switcher chzn-color"
 				>
 				<option	value="0">JHIDE</option>
 				<option	value="1">JSHOW</option>
@@ -474,7 +476,7 @@
 				label="JGLOBAL_LINK_CATEGORY_LABEL"
 				description="JGLOBAL_LINK_CATEGORY_DESC"
 				useglobal="true"
-				class="chzn-color"
+				class="switcher chzn-color"
 				>
 				<option	value="0">JNO</option>
 				<option	value="1">JYES</option>
@@ -486,7 +488,7 @@
 				label="JGLOBAL_SHOW_PARENT_CATEGORY_LABEL"
 				description="JGLOBAL_SHOW_PARENT_CATEGORY_DESC"
 				useglobal="true"
-				class="chzn-color"
+				class="switcher chzn-color"
 				>
 				<option	value="0">JHIDE</option>
 				<option	value="1">JSHOW</option>
@@ -498,7 +500,7 @@
 				label="JGLOBAL_LINK_PARENT_CATEGORY_LABEL"
 				description="JGLOBAL_LINK_PARENT_CATEGORY_DESC"
 				useglobal="true"
-				class="chzn-color"
+				class="switcher chzn-color"
 				>
 				<option	value="0">JNO</option>
 				<option	value="1">JYES</option>
@@ -509,7 +511,7 @@
 				type="list"
 				label="JGLOBAL_SHOW_ASSOCIATIONS_LABEL"
 				description="JGLOBAL_SHOW_ASSOCIATIONS_DESC"
-				class="chzn-color"
+				class="switcher chzn-color"
 				useglobal="true"
 				>
 				<option value="1">JSHOW</option>
@@ -522,7 +524,7 @@
 				label="JGLOBAL_SHOW_AUTHOR_LABEL"
 				description="JGLOBAL_SHOW_AUTHOR_DESC"
 				useglobal="true"
-				class="chzn-color"
+				class="switcher chzn-color"
 				>
 				<option	value="0">JHIDE</option>
 				<option	value="1">JSHOW</option>
@@ -534,7 +536,7 @@
 				label="JGLOBAL_LINK_AUTHOR_LABEL"
 				description="JGLOBAL_LINK_AUTHOR_DESC"
 				useglobal="true"
-				class="chzn-color"
+				class="switcher chzn-color"
 				>
 				<option	value="0">JNO</option>
 				<option	value="1">JYES</option>
@@ -546,7 +548,7 @@
 				label="JGLOBAL_SHOW_CREATE_DATE_LABEL"
 				description="JGLOBAL_SHOW_CREATE_DATE_DESC"
 				useglobal="true"
-				class="chzn-color"
+				class="switcher chzn-color"
 				>
 				<option	value="0">JHIDE</option>
 				<option	value="1">JSHOW</option>
@@ -558,7 +560,7 @@
 				label="JGLOBAL_SHOW_MODIFY_DATE_LABEL"
 				description="JGLOBAL_SHOW_MODIFY_DATE_DESC"
 				useglobal="true"
-				class="chzn-color"
+				class="switcher chzn-color"
 				>
 				<option	value="0">JHIDE</option>
 				<option	value="1">JSHOW</option>
@@ -569,7 +571,7 @@
 				type="list"
 				label="JGLOBAL_SHOW_PUBLISH_DATE_LABEL"
 				description="JGLOBAL_SHOW_PUBLISH_DATE_DESC"
-				class="chzn-color"
+				class="switcher chzn-color"
 				useglobal="true"
 				>
 				<option	value="0">JHIDE</option>
@@ -582,7 +584,7 @@
 				label="JGLOBAL_SHOW_NAVIGATION_LABEL"
 				description="JGLOBAL_SHOW_NAVIGATION_DESC"
 				useglobal="true"
-				class="chzn-color"
+				class="switcher chzn-color"
 				>
 				<option value="0">JHIDE</option>
 				<option	value="1">JSHOW</option>
@@ -594,7 +596,7 @@
 				label="JGLOBAL_SHOW_ICONS_LABEL"
 				description="JGLOBAL_SHOW_ICONS_DESC"
 				useglobal="true"
-				class="chzn-color"
+				class="switcher chzn-color"
 				>
 				<option	value="0">JHIDE</option>
 				<option	value="1">JSHOW</option>
@@ -606,7 +608,7 @@
 				label="JGLOBAL_SHOW_PRINT_ICON_LABEL"
 				description="JGLOBAL_SHOW_PRINT_ICON_DESC"
 				useglobal="true"
-				class="chzn-color"
+				class="switcher chzn-color"
 				>
 				<option	value="0">JHIDE</option>
 				<option	value="1">JSHOW</option>
@@ -618,7 +620,7 @@
 				label="JGLOBAL_SHOW_EMAIL_ICON_LABEL"
 				description="JGLOBAL_SHOW_EMAIL_ICON_DESC"
 				useglobal="true"
-				class="chzn-color"
+				class="switcher chzn-color"
 				>
 				<option	value="0">JHIDE</option>
 				<option	value="1">JSHOW</option>
@@ -630,7 +632,7 @@
 				label="JGLOBAL_SHOW_VOTE_LABEL"
 				description="JGLOBAL_SHOW_VOTE_DESC"
 				useglobal="true"
-				class="chzn-color"
+				class="switcher chzn-color"
 				>
 				<option value="0">JHIDE</option>
 				<option	value="1">JSHOW</option>
@@ -642,7 +644,7 @@
 				label="JGLOBAL_SHOW_HITS_LABEL"
 				description="JGLOBAL_SHOW_HITS_DESC"
 				useglobal="true"
-				class="chzn-color"
+				class="switcher chzn-color"
 				>
 				<option	value="0">JHIDE</option>
 				<option	value="1">JSHOW</option>
@@ -654,7 +656,7 @@
 				label="JGLOBAL_SHOW_UNAUTH_LINKS_LABEL"
 				description="JGLOBAL_SHOW_UNAUTH_LINKS_DESC"
 				useglobal="true"
-				class="chzn-color"
+				class="switcher chzn-color"
 				>
 				<option value="0">JNO</option>
 				<option value="1">JYES</option>
@@ -666,7 +668,7 @@
 				label="COM_BLOG_FIELD_URLSPOSITION_LABEL"
 				description="COM_BLOG_FIELD_URLSPOSITION_DESC"
 				useglobal="true"
-				class="chzn-color"
+				class="switcher chzn-color"
 				>
 				<option value="0">COM_BLOG_FIELD_OPTION_ABOVE</option>
 				<option value="1">COM_BLOG_FIELD_OPTION_BELOW</option>
@@ -703,7 +705,7 @@
 				description="COM_BLOG_SHOW_PUBLISHING_OPTIONS_DESC"
 				default=""
 				useglobal="true"
-				class="chzn-color"
+				class="switcher chzn-color"
 				>
 				<option value="0">JNO</option>
 				<option value="1">JYES</option>
@@ -716,7 +718,7 @@
 				description="COM_BLOG_SHOW_ARTICLE_OPTIONS_DESC"
 				default=""
 				useglobal="true"
-				class="chzn-color"
+				class="switcher chzn-color"
 				>
 				<option value="0">JNO</option>
 				<option value="1">JYES</option>
@@ -728,7 +730,7 @@
 				label="COM_BLOG_SHOW_IMAGES_URLS_BACK_LABEL"
 				description="COM_BLOG_SHOW_IMAGES_URLS_BACK_DESC"
 				useglobal="true"
-				class="chzn-color"
+				class="switcher chzn-color"
 				default=""
 				>
 				<option value="0">JNO</option>
@@ -741,7 +743,7 @@
 				label="COM_BLOG_SHOW_IMAGES_URLS_FRONT_LABEL"
 				description="COM_BLOG_SHOW_IMAGES_URLS_FRONT_DESC"
 				useglobal="true"
-				class="chzn-color"
+				class="switcher chzn-color"
 				default=""
 				>
 				<option value="0">JNO</option>
