--- a/admin/models/forms/article.xml
+++ b/admin/models/forms/article.xml
@@ -264,6 +264,7 @@
 			type="calendar"
 			label="COM_BLOG_FIELD_PUBLISH_UP_LABEL"
 			description="COM_BLOG_FIELD_PUBLISH_UP_DESC"
+			format="%Y-%m-%d %H:%M:%S"
 			translateformat="true"
 			showtime="true"
 			size="22"
