--- a/admin/models/forms/article.xml
+++ b/admin/models/forms/article.xml
@@ -1,5 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <form>
+	<config>
+		<inlinehelp button="show"/>
+	</config>
 	<fieldset addfieldpath="/administrator/components/com_categories/models/fields" >
 		<field
 			name="id"
@@ -7,7 +10,6 @@
 			label="JGLOBAL_FIELD_ID_LABEL"
 			description="JGLOBAL_FIELD_ID_DESC"
 			class="readonly"
-			size="10"
 			default="0"
 			readonly="true"
 		/>
@@ -24,8 +26,8 @@
 			label="JGLOBAL_TITLE"
 			description="JFIELD_TITLE_DESC"
 			class="input-xxlarge input-large-text"
-			size="40"
 			required="true"
+			maxlength="255"
 		/>
 
 		<field
@@ -34,7 +36,6 @@
 			label="JFIELD_ALIAS_LABEL"
 			description="JFIELD_ALIAS_DESC"
 			hint="JFIELD_ALIAS_PLACEHOLDER"
-			size="40"
 		/>
 
 		<field
@@ -43,7 +44,6 @@
 			label="COM_BLOG_FIELD_NOTE_LABEL"
 			description="COM_BLOG_FIELD_NOTE_DESC"
 			class="span12"
-			size="40"
 			maxlength="255"
 		/>
 
@@ -54,7 +54,6 @@
 			description="JGLOBAL_FIELD_VERSION_NOTE_DESC"
 			class="span12"
 			maxlength="255"
-			size="45"
 		/>
 
 		<field
@@ -62,7 +61,7 @@
 			type="editor"
 			label="COM_BLOG_FIELD_ARTICLETEXT_LABEL"
 			description="COM_BLOG_FIELD_ARTICLETEXT_DESC"
-			filter="ComponentHelper::filterText"
+			filter="JComponentHelper::filterText"
 			buttons="false"
 		/>
 
@@ -70,6 +69,7 @@
 		<field
 			name="secondary_categories"
 			type="category"
+			layout="joomla.form.field.list-fancy-select"
 			label="COM_BLOG_FIELD_SECONDARY_CATEGORIES_LABEL"
 			description="COM_BLOG_FIELD_SECONDARY_CATEGORIES_DESC"
 			extension="com_blog"
@@ -129,7 +129,7 @@
 			showon="toggle_sources_type:0"
 			label="COM_BLOG_FIELD_SOURCES_BLOB_LABEL"
 			description="COM_BLOG_FIELD_SOURCES_BLOB_DESC"
-			filter="ComponentHelper::filterText"
+			filter="JComponentHelper::filterText"
 			buttons="false"
 		/>
 
@@ -156,6 +156,21 @@
 			description="COM_BLOG_FIELD_EXTRA3_DESC"
 			filter="string"
 		/>
+
+		<!-- <field name="extra1" type="list" multiple="true"
+			layout="joomla.form.field.list-fancy-select"
+			label="COM_GUESTCOMMENTS_FIELD_EXTRA1_LABEL"
+			description="COM_GUESTCOMMENTS_FIELD_EXTRA1_DESC">
+			<option value="">JGLOBAL_SELECT_AN_OPTION</option>
+		</field> -->
+
+		<!-- <field name="extra2" type="radio"
+			layout="joomla.form.field.radio.switcher"
+			label="COM_GUESTCOMMENTS_FIELD_EXTRA2_LABEL"
+			description="COM_GUESTCOMMENTS_FIELD_EXTRA2_DESC">
+			<option value="0">JGLOBAL_SELECT_AN_OPTION</option>
+			<option value="1">JGLOBAL_SELECT_AN_OPTION</option>
+		</field> -->
 		<!-- End custom fields -->
 
 		<field
@@ -165,7 +180,6 @@
 			description="JFIELD_PUBLISHED_DESC"
 			class="form-select-color-state chzn-color-state"
 			filter="intval"
-			size="1"
 			default="1"
 			>
 			<option value="1">JPUBLISHED</option>
@@ -914,115 +928,203 @@
 	/>
 
 	<fields name="images" label="COM_BLOG_FIELD_IMAGE_OPTIONS">
-		<field
-			name="image_intro"
-			type="media"
-			label="COM_BLOG_FIELD_INTRO_LABEL"
-			description="COM_BLOG_FIELD_INTRO_DESC"
-		/>
+		<fieldset name="image-intro" label="COM_BLOG_FIELD_INTRO_LABEL">
+			<field
+				name="image_intro"
+				type="media"
+				label="COM_BLOG_FIELD_INTRO_LABEL"
+				description="COM_BLOG_FIELD_INTRO_DESC"
+			/>
 
-		<field
-			name="float_intro"
-			type="list"
-			label="COM_BLOG_FLOAT_LABEL"
-			description="COM_BLOG_FLOAT_DESC"
-			useglobal="true"
-			>
-			<option value="right">COM_BLOG_RIGHT</option>
-			<option value="left">COM_BLOG_LEFT</option>
-			<option value="none">COM_BLOG_NONE</option>
-		</field>
+			<field
+				name="float_intro"
+				type="list"
+				label="COM_BLOG_FLOAT_LABEL"
+				description="COM_BLOG_FLOAT_DESC"
+				useglobal="true"
+				>
+				<option value="right">COM_BLOG_RIGHT</option>
+				<option value="left">COM_BLOG_LEFT</option>
+				<option value="none">COM_BLOG_NONE</option>
+			</field>
 
-		<field
-			name="image_intro_alt"
-			type="text"
-			label="COM_BLOG_FIELD_IMAGE_ALT_LABEL"
-			description="COM_BLOG_FIELD_IMAGE_ALT_DESC"
-			size="20"
-		/>
+			<field
+				name="image_intro_alt"
+				type="text"
+				label="COM_BLOG_FIELD_IMAGE_ALT_LABEL"
+				description="COM_BLOG_FIELD_IMAGE_ALT_DESC"
+			/>
 
-		<field
-			name="image_intro_caption"
-			type="text"
-			label="COM_BLOG_FIELD_IMAGE_CAPTION_LABEL"
-			description="COM_BLOG_FIELD_IMAGE_CAPTION_DESC"
-			size="20"
-		/>
+			<field
+					name="image_intro_alt_empty"
+					type="checkbox"
+					label="COM_BLOG_FIELD_IMAGE_ALT_EMPTY_LABEL"
+					description="COM_BLOG_FIELD_IMAGE_ALT_EMPTY_DESC"
+				/>
+
+			<field
+				name="image_intro_caption"
+				type="text"
+				label="COM_BLOG_FIELD_IMAGE_CAPTION_LABEL"
+				description="COM_BLOG_FIELD_IMAGE_CAPTION_DESC"
+			/>
+
+		</fieldset>
+
+		<fieldset name="image-full" label="COM_BLOG_FIELD_FULL_LABEL">
+			<field
+				name="image_fulltext"
+				type="media"
+				label="COM_BLOG_FIELD_FULL_LABEL"
+				description="COM_BLOG_FIELD_FULL_DESC"
+			/>
+
+			<field
+				name="image_fulltext_alt"
+				type="text"
+				label="COM_BLOG_FIELD_IMAGE_ALT_LABEL"
+				description="COM_BLOG_FIELD_IMAGE_ALT_DESC"
+			/>
+
+			<field
+				name="image_fulltext_alt_empty"
+				type="checkbox"
+				label="COM_CONTENT_FIELD_IMAGE_ALT_EMPTY_LABEL"
+				description="COM_CONTENT_FIELD_IMAGE_ALT_EMPTY_DESC"
+			/>
+
+			<field
+				name="float_fulltext"
+				type="list"
+				label="COM_BLOG_FLOAT_LABEL"
+				description="COM_BLOG_FLOAT_DESC"
+				useglobal="true"
+				>
+				<option value="right">COM_BLOG_RIGHT</option>
+				<option value="left">COM_BLOG_LEFT</option>
+				<option value="none">COM_BLOG_NONE</option>
+			</field>
+
+			<field
+				name="image_fulltext_caption"
+				type="text"
+				label="COM_BLOG_FIELD_IMAGE_CAPTION_LABEL"
+				description="COM_BLOG_FIELD_IMAGE_CAPTION_DESC"
+			/>
+		</fieldset>
 
 		<field
 			name="spacer1"
 			type="spacer"
 			hr="true"
 		/>
-
-		<field
-			name="image_fulltext"
-			type="media"
-			label="COM_BLOG_FIELD_FULL_LABEL"
-			description="COM_BLOG_FIELD_FULL_DESC"
-		/>
-
-		<field
-			name="float_fulltext"
-			type="list"
-			label="COM_BLOG_FLOAT_LABEL"
-			description="COM_BLOG_FLOAT_DESC"
-			useglobal="true"
-			>
-			<option value="right">COM_BLOG_RIGHT</option>
-			<option value="left">COM_BLOG_LEFT</option>
-			<option value="none">COM_BLOG_NONE</option>
-		</field>
-
-		<field
-			name="image_fulltext_alt"
-			type="text"
-			label="COM_BLOG_FIELD_IMAGE_ALT_LABEL"
-			description="COM_BLOG_FIELD_IMAGE_ALT_DESC"
-			size="20"
-		/>
-
-		<field
-			name="image_fulltext_caption"
-			type="text"
-			label="COM_BLOG_FIELD_IMAGE_CAPTION_LABEL"
-			description="COM_BLOG_FIELD_IMAGE_CAPTION_DESC"
-			size="20"
-		/>
 	</fields>
+
 	<fields name="urls" label="COM_BLOG_FIELD_URLS_OPTIONS">
-		<field
-			name="urla"
-			type="url"
-			label="COM_BLOG_FIELD_URLA_LABEL"
-			description="COM_BLOG_FIELD_URL_DESC"
-			validate="url"
-			filter="url"
-			relative="true"
-		/>
+		<fieldset name="linka" label="COM_BLOG_FIELD_URLA_LABEL">
+			<field
+				name="urla"
+				type="url"
+				label="COM_BLOG_FIELD_URLA_LABEL"
+				description="COM_BLOG_FIELD_URL_DESC"
+				validate="url"
+				filter="url"
+				relative="true"
+			/>
 
-		<field
-			name="urlatext"
-			type="text"
-			label="COM_BLOG_FIELD_URLA_LINK_TEXT_LABEL"
-			description="COM_BLOG_FIELD_URL_LINK_TEXT_DESC"
-			size="20"
-		/>
+			<field
+				name="urlatext"
+				type="text"
+				label="COM_BLOG_FIELD_URLA_LINK_TEXT_LABEL"
+				description="COM_BLOG_FIELD_URL_LINK_TEXT_DESC"
+			/>
 
-		<field
-			name="targeta"
-			type="list"
-			label="COM_BLOG_URL_FIELD_BROWSERNAV_LABEL"
-			description="COM_BLOG_URL_FIELD_BROWSERNAV_DESC"
-			default=""
-			filter="options"
-			useglobal="true"
-			>
-			<option value="0">JBROWSERTARGET_PARENT</option>
-			<option value="1">JBROWSERTARGET_NEW</option>
-			<option value="2">JBROWSERTARGET_POPUP</option>
-			<option value="3">JBROWSERTARGET_MODAL</option>
-		</field>
+			<field
+				name="targeta"
+				type="list"
+				label="COM_BLOG_URL_FIELD_BROWSERNAV_LABEL"
+				description="COM_BLOG_URL_FIELD_BROWSERNAV_DESC"
+				default=""
+				filter="options"
+				useglobal="true"
+				validate="options"
+				>
+				<option value="0">JBROWSERTARGET_PARENT</option>
+				<option value="1">JBROWSERTARGET_NEW</option>
+				<option value="2">JBROWSERTARGET_POPUP</option>
+				<option value="3">JBROWSERTARGET_MODAL</option>
+			</field>
+		</fieldset>
+
+		<fieldset name="linkb" label="COM_BLOG_FIELD_URLB_LABEL">
+			<field
+				name="urlb"
+				type="url"
+				label="COM_BLOG_FIELD_URLB_LABEL"
+				description="COM_BLOG_FIELD_URL_DESC"
+				validate="url"
+				filter="url"
+				relative="true"
+			/>
+
+			<field
+				name="urlbtext"
+				type="text"
+				label="COM_BLOG_FIELD_URLB_LINK_TEXT_LABEL"
+				description="COM_BLOG_FIELD_URL_LINK_TEXT_DESC"
+			/>
+
+			<field
+				name="targetb"
+				type="list"
+				label="COM_BLOG_URL_FIELD_BROWSERNAV_LABEL"
+				description="COM_BLOG_URL_FIELD_BROWSERNAV_DESC"
+				default=""
+				filter="options"
+				useglobal="true"
+				validate="options"
+				>
+				<option value="0">JBROWSERTARGET_PARENT</option>
+				<option value="1">JBROWSERTARGET_NEW</option>
+				<option value="2">JBROWSERTARGET_POPUP</option>
+				<option value="3">JBROWSERTARGET_MODAL</option>
+			</field>
+		</fieldset>
+
+		<fieldset name="linkc" label="COM_BLOG_FIELD_URLC_LABEL">
+			<field
+				name="urlc"
+				type="url"
+				label="COM_BLOG_FIELD_URLC_LABEL"
+				description="COM_BLOG_FIELD_URL_DESC"
+				validate="url"
+				filter="url"
+				relative="true"
+			/>
+
+			<field
+				name="urlctext"
+				type="text"
+				label="COM_BLOG_FIELD_URLC_LINK_TEXT_LABEL"
+				description="COM_BLOG_FIELD_URL_LINK_TEXT_DESC"
+			/>
+
+			<field
+				name="targetc"
+				type="list"
+				label="COM_BLOG_URL_FIELD_BROWSERNAV_LABEL"
+				description="COM_BLOG_URL_FIELD_BROWSERNAV_DESC"
+				default=""
+				filter="options"
+				useglobal="true"
+				validate="options"
+				>
+				<option value="0">JBROWSERTARGET_PARENT</option>
+				<option value="1">JBROWSERTARGET_NEW</option>
+				<option value="2">JBROWSERTARGET_POPUP</option>
+				<option value="3">JBROWSERTARGET_MODAL</option>
+			</field>
+		</fieldset>
 
 		<field
 			name="spacer3"
@@ -1031,77 +1133,10 @@
 		/>
 
 		<field
-			name="urlb"
-			type="url"
-			label="COM_BLOG_FIELD_URLB_LABEL"
-			description="COM_BLOG_FIELD_URL_DESC"
-			validate="url"
-			filter="url"
-			relative="true"
-		/>
-
-		<field
-			name="urlbtext"
-			type="text"
-			label="COM_BLOG_FIELD_URLB_LINK_TEXT_LABEL"
-			description="COM_BLOG_FIELD_URL_LINK_TEXT_DESC"
-			size="20"
-		/>
-
-		<field
-			name="targetb"
-			type="list"
-			label="COM_BLOG_URL_FIELD_BROWSERNAV_LABEL"
-			description="COM_BLOG_URL_FIELD_BROWSERNAV_DESC"
-			default=""
-			filter="options"
-			useglobal="true"
-			>
-			<option value="0">JBROWSERTARGET_PARENT</option>
-			<option value="1">JBROWSERTARGET_NEW</option>
-			<option value="2">JBROWSERTARGET_POPUP</option>
-			<option value="3">JBROWSERTARGET_MODAL</option>
-		</field>
-
-		<field
 			name="spacer4"
 			type="spacer"
 			hr="true"
 		/>
-
-		<field
-			name="urlc"
-			type="url"
-			label="COM_BLOG_FIELD_URLC_LABEL"
-			description="COM_BLOG_FIELD_URL_DESC"
-			validate="url"
-			filter="url"
-			relative="true"
-		/>
-
-		<field
-			name="urlctext"
-			type="text"
-			label="COM_BLOG_FIELD_URLC_LINK_TEXT_LABEL"
-			description="COM_BLOG_FIELD_URL_LINK_TEXT_DESC"
-			size="20"
-		/>
-
-		<field
-			name="targetc"
-			type="list"
-			label="COM_BLOG_URL_FIELD_BROWSERNAV_LABEL"
-			description="COM_BLOG_URL_FIELD_BROWSERNAV_DESC"
-			default=""
-			filter="options"
-			useglobal="true"
-			>
-			<option value="0">JBROWSERTARGET_PARENT</option>
-			<option value="1">JBROWSERTARGET_NEW</option>
-			<option value="2">JBROWSERTARGET_POPUP</option>
-			<option value="3">JBROWSERTARGET_MODAL</option>
-		</field>
-
 	</fields>
 
 	<fields name="metadata" label="JGLOBAL_FIELDSET_METADATA_OPTIONS">
