Fix issue with category filter (admin)

--- a/admin/models/forms/filter_articles.xml
+++ b/admin/models/forms/filter_articles.xml
@@ -24,6 +24,7 @@
 			name="category_id"
 			type="category"
 			label="JOPTION_FILTER_CATEGORY"
+			layout="joomla.form.field.list-fancy-select"
 			description="JOPTION_FILTER_CATEGORY_DESC"
 			multiple="true"
 			class="multipleCategories"
@@ -36,6 +37,7 @@
 			name="access"
 			type="accesslevel"
 			label="JOPTION_FILTER_ACCESS"
+			layout="joomla.form.field.list-fancy-select"
 			description="JOPTION_FILTER_ACCESS_DESC"
 			multiple="true"
 			class="multipleAccessLevels"
@@ -46,6 +48,7 @@
 			name="author_id"
 			type="author"
 			label="COM_BLOG_FILTER_AUTHOR"
+			layout="joomla.form.field.list-fancy-select"
 			description="COM_BLOG_FILTER_AUTHOR_DESC"
 			multiple="true"
 			class="multipleAuthors"
