--- a/admin/models/forms/article.xml
+++ b/admin/models/forms/article.xml
@@ -102,6 +102,7 @@
 		<field
 			name="toggle_sources_type"
 			type="radio"
+			layout="joomla.form.field.radio.switcher"
 			class="btn-group"
 			label="COM_BLOG_FIELD_TOGGLE_SOURCES_TYPE_LABEL"
 			description="COM_BLOG_FIELD_TOGGLE_SOURCES_TYPE_DESC"
@@ -363,10 +364,10 @@
 
 		<field
 			name="featured"
-			type="radio"
+			type="list"
 			label="JFEATURED"
 			description="COM_BLOG_FIELD_FEATURED_DESC"
-			class="btn-group btn-group-yesno"
+			class="form-select-color-state chzn-color-state"
 			default="0"
 			>
 			<option value="1">JYES</option>
@@ -403,6 +404,7 @@
 			<field
 				name="show_title"
 				type="list"
+				layout="joomla.form.field.list-fancy-select"
 				label="JGLOBAL_SHOW_TITLE_LABEL"
 				description="JGLOBAL_SHOW_TITLE_DESC"
 				class="switcher chzn-color"
@@ -415,6 +417,7 @@
 			<field
 				name="link_titles"
 				type="list"
+				layout="joomla.form.field.list-fancy-select"
 				label="JGLOBAL_LINKED_TITLES_LABEL"
 				description="JGLOBAL_LINKED_TITLES_DESC"
 				class="switcher chzn-color"
@@ -427,6 +430,7 @@
 			<field
 				name="show_tags"
 				type="list"
+				layout="joomla.form.field.list-fancy-select"
 				label="COM_BLOG_FIELD_SHOW_TAGS_LABEL"
 				description="COM_BLOG_FIELD_SHOW_TAGS_DESC"
 				class="switcher chzn-color"
@@ -439,6 +443,7 @@
 			<field
 				name="show_intro"
 				type="list"
+				layout="joomla.form.field.list-fancy-select"
 				label="JGLOBAL_SHOW_INTRO_LABEL"
 				description="JGLOBAL_SHOW_INTRO_DESC"
 				class="switcher chzn-color"
@@ -451,6 +456,7 @@
 			<field
 				name="info_block_position"
 				type="list"
+				layout="joomla.form.field.list-fancy-select"
 				label="COM_BLOG_FIELD_INFOBLOCK_POSITION_LABEL"
 				description="COM_BLOG_FIELD_INFOBLOCK_POSITION_DESC"
 				useglobal="true"
@@ -463,6 +469,7 @@
 			<field
 				name="info_block_show_title"
 				type="list"
+				layout="joomla.form.field.list-fancy-select"
 				label="COM_BLOG_FIELD_INFOBLOCK_TITLE_LABEL"
 				description="COM_BLOG_FIELD_INFOBLOCK_TITLE_DESC"
 				class="switcher chzn-color"
@@ -475,6 +482,7 @@
 			<field
 				name="show_category"
 				type="list"
+				layout="joomla.form.field.list-fancy-select"
 				label="JGLOBAL_SHOW_CATEGORY_LABEL"
 				description="JGLOBAL_SHOW_CATEGORY_DESC"
 				useglobal="true"
@@ -487,6 +495,7 @@
 			<field
 				name="link_category"
 				type="list"
+				layout="joomla.form.field.list-fancy-select"
 				label="JGLOBAL_LINK_CATEGORY_LABEL"
 				description="JGLOBAL_LINK_CATEGORY_DESC"
 				useglobal="true"
@@ -499,6 +508,7 @@
 			<field
 				name="show_parent_category"
 				type="list"
+				layout="joomla.form.field.list-fancy-select"
 				label="JGLOBAL_SHOW_PARENT_CATEGORY_LABEL"
 				description="JGLOBAL_SHOW_PARENT_CATEGORY_DESC"
 				useglobal="true"
@@ -511,6 +521,7 @@
 			<field
 				name="link_parent_category"
 				type="list"
+				layout="joomla.form.field.list-fancy-select"
 				label="JGLOBAL_LINK_PARENT_CATEGORY_LABEL"
 				description="JGLOBAL_LINK_PARENT_CATEGORY_DESC"
 				useglobal="true"
@@ -523,6 +534,7 @@
 			<field
 				name="show_associations"
 				type="list"
+				layout="joomla.form.field.list-fancy-select"
 				label="JGLOBAL_SHOW_ASSOCIATIONS_LABEL"
 				description="JGLOBAL_SHOW_ASSOCIATIONS_DESC"
 				class="switcher chzn-color"
@@ -535,6 +547,7 @@
 			<field
 				name="show_author"
 				type="list"
+				layout="joomla.form.field.list-fancy-select"
 				label="JGLOBAL_SHOW_AUTHOR_LABEL"
 				description="JGLOBAL_SHOW_AUTHOR_DESC"
 				useglobal="true"
@@ -547,6 +560,7 @@
 			<field
 				name="link_author"
 				type="list"
+				layout="joomla.form.field.list-fancy-select"
 				label="JGLOBAL_LINK_AUTHOR_LABEL"
 				description="JGLOBAL_LINK_AUTHOR_DESC"
 				useglobal="true"
@@ -559,6 +573,7 @@
 			<field
 				name="show_create_date"
 				type="list"
+				layout="joomla.form.field.list-fancy-select"
 				label="JGLOBAL_SHOW_CREATE_DATE_LABEL"
 				description="JGLOBAL_SHOW_CREATE_DATE_DESC"
 				useglobal="true"
@@ -571,6 +586,7 @@
 			<field
 				name="show_modify_date"
 				type="list"
+				layout="joomla.form.field.list-fancy-select"
 				label="JGLOBAL_SHOW_MODIFY_DATE_LABEL"
 				description="JGLOBAL_SHOW_MODIFY_DATE_DESC"
 				useglobal="true"
@@ -583,6 +599,7 @@
 			<field
 				name="show_publish_date"
 				type="list"
+				layout="joomla.form.field.list-fancy-select"
 				label="JGLOBAL_SHOW_PUBLISH_DATE_LABEL"
 				description="JGLOBAL_SHOW_PUBLISH_DATE_DESC"
 				class="switcher chzn-color"
@@ -595,6 +612,7 @@
 			<field
 				name="show_item_navigation"
 				type="list"
+				layout="joomla.form.field.list-fancy-select"
 				label="JGLOBAL_SHOW_NAVIGATION_LABEL"
 				description="JGLOBAL_SHOW_NAVIGATION_DESC"
 				useglobal="true"
@@ -607,6 +625,7 @@
 			<field
 				name="show_icons"
 				type="list"
+				layout="joomla.form.field.list-fancy-select"
 				label="JGLOBAL_SHOW_ICONS_LABEL"
 				description="JGLOBAL_SHOW_ICONS_DESC"
 				useglobal="true"
@@ -619,6 +638,7 @@
 			<field
 				name="show_print_icon"
 				type="list"
+				layout="joomla.form.field.list-fancy-select"
 				label="JGLOBAL_SHOW_PRINT_ICON_LABEL"
 				description="JGLOBAL_SHOW_PRINT_ICON_DESC"
 				useglobal="true"
@@ -631,6 +651,7 @@
 			<field
 				name="show_email_icon"
 				type="list"
+				layout="joomla.form.field.list-fancy-select"
 				label="JGLOBAL_SHOW_EMAIL_ICON_LABEL"
 				description="JGLOBAL_SHOW_EMAIL_ICON_DESC"
 				useglobal="true"
@@ -643,6 +664,7 @@
 			<field
 				name="show_vote"
 				type="list"
+				layout="joomla.form.field.list-fancy-select"
 				label="JGLOBAL_SHOW_VOTE_LABEL"
 				description="JGLOBAL_SHOW_VOTE_DESC"
 				useglobal="true"
@@ -655,6 +677,7 @@
 			<field
 				name="show_hits"
 				type="list"
+				layout="joomla.form.field.list-fancy-select"
 				label="JGLOBAL_SHOW_HITS_LABEL"
 				description="JGLOBAL_SHOW_HITS_DESC"
 				useglobal="true"
@@ -667,6 +690,7 @@
 			<field
 				name="show_noauth"
 				type="list"
+				layout="joomla.form.field.list-fancy-select"
 				label="JGLOBAL_SHOW_UNAUTH_LINKS_LABEL"
 				description="JGLOBAL_SHOW_UNAUTH_LINKS_DESC"
 				useglobal="true"
@@ -679,6 +703,7 @@
 			<field
 				name="urls_position"
 				type="list"
+				layout="joomla.form.field.list-fancy-select"
 				label="COM_BLOG_FIELD_URLSPOSITION_LABEL"
 				description="COM_BLOG_FIELD_URLSPOSITION_DESC"
 				useglobal="true"
@@ -715,6 +740,7 @@
 			<field
 				name="show_publishing_options"
 				type="list"
+				layout="joomla.form.field.list-fancy-select"
 				label="COM_BLOG_SHOW_PUBLISHING_OPTIONS_LABEL"
 				description="COM_BLOG_SHOW_PUBLISHING_OPTIONS_DESC"
 				default=""
@@ -728,6 +754,7 @@
 			<field
 				name="show_article_options"
 				type="list"
+				layout="joomla.form.field.list-fancy-select"
 				label="COM_BLOG_SHOW_ARTICLE_OPTIONS_LABEL"
 				description="COM_BLOG_SHOW_ARTICLE_OPTIONS_DESC"
 				default=""
@@ -741,6 +768,7 @@
 			<field
 				name="show_urls_images_backend"
 				type="list"
+				layout="joomla.form.field.list-fancy-select"
 				label="COM_BLOG_SHOW_IMAGES_URLS_BACK_LABEL"
 				description="COM_BLOG_SHOW_IMAGES_URLS_BACK_DESC"
 				useglobal="true"
@@ -754,6 +782,7 @@
 			<field
 				name="show_urls_images_frontend"
 				type="list"
+				layout="joomla.form.field.list-fancy-select"
 				label="COM_BLOG_SHOW_IMAGES_URLS_FRONT_LABEL"
 				description="COM_BLOG_SHOW_IMAGES_URLS_FRONT_DESC"
 				useglobal="true"
@@ -1149,10 +1178,10 @@
 				description="JFIELD_METADATA_ROBOTS_DESC"
 				>
 				<option value="">JGLOBAL_USE_GLOBAL</option>
-				<option value="index, follow">JGLOBAL_INDEX_FOLLOW</option>
-				<option value="noindex, follow">JGLOBAL_NOINDEX_FOLLOW</option>
-				<option value="index, nofollow">JGLOBAL_INDEX_NOFOLLOW</option>
-				<option value="noindex, nofollow">JGLOBAL_NOINDEX_NOFOLLOW</option>
+				<option value="index, follow" />
+				<option value="noindex, follow" />
+				<option value="index, nofollow" />
+				<option value="noindex, nofollow" />
 			</field>
 
 			<field
